one last time to prevent overflow

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,10 +22,12 @@ body {
 
 div {
   position: fixed;
-  z-index: 2;
+  z-index: 10;
   height: 100%;
+  width: 90%;
   top: 0;
   left: 0;
+  overflow: hidden;
 }
 
 .info {
@@ -59,11 +61,12 @@ div {
 
   div {
     position: fixed;
-    z-index: 2;
+    z-index: 10;
     height: 100vh;
     width: 4000vh;
     top: 0;
     left: 0;
+    overflow: auto;
   }
 
   .info {
